# 64-controller-to-midi-converter

./: .gitignore  .gitmodules  README.md  flake.nix
.github/: copilot-instructions.md
firmware/: CMakeLists.txt
firmware/renode/: n64_midi_converter.resc  rp2040_sim.repl
firmware/src/: FreeRTOSConfig.h  config.h  controller_task.cpp  controller_task.h  main.cpp  mapping.cpp  mapping.h  midi.cpp  midi.h  midi_uart_lib_config.h  n64_controller.cpp  n64_controller.h  n64_controller_sim.cpp  ring_buffer_lib_config.h  sim_overrides.c
firmware/tests/: CMakeLists.txt  midi_stubs.cpp  midi_stubs.h  test_mapping.cpp
firmware/tests/stubs/hardware/: pio.h
firmware/tools/n64_midi_tester/: CMakeLists.txt  main.cpp
firmware/tools/n64_midi_tester/stubs/hardware/: pio.h
firmware/tools/renode_tester/: tester.py
hardware/: hardware.kicad_prl  hardware.kicad_pro  hardware.kicad_sch
